force-app/main/default/objects/Quote/fields/Installation_and_commissioning_required__c.field-meta.xml
<CustomField>
    <fullName>Installation_and_commissioning_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, installation and commissioning at the customer site is part of the quote scope.</description>
    <label>Installation and Commissioning Required</label>
    <type>Checkbox</type>
</CustomField>