force-app/main/default/objects/Quote/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 1 approver for the price approval process (typically the Sales Executive's ASM).</description>
    <label>L1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (L1 Approver)</relationshipLabel>
    <relationshipName>Quotes_L1Approver</relationshipName>
    <type>Lookup</type>
</CustomField>