force-app/main/default/objects/Quote/fields/L2_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 2 approver for the price approval process (typically the ASM's TSM).</description>
    <label>L2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (L2 Approver)</relationshipLabel>
    <relationshipName>Quotes_L2Approver</relationshipName>
    <type>Lookup</type>
</CustomField>