force-app/main/default/objects/Quote/fields/L3_Approver__c.field-meta.xml
<CustomField>
    <fullName>L3_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 3 approver for the price approval process (typically Order Acceptance / Finance Manager).</description>
    <label>L3 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (L3 Approver)</relationshipLabel>
    <relationshipName>Quotes_L3Approver</relationshipName>
    <type>Lookup</type>
</CustomField>