force-app/main/default/objects/Quote/fields/Level_1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 1 approver for the price approval process (typically the Sales Executive's ASM).</description>
    <label>Level 1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Level 1 Approver)</relationshipLabel>
    <relationshipName>Quotes_Level1Approver</relationshipName>
    <type>Lookup</type>
</CustomField>