force-app/main/default/objects/Quote/fields/Level_2_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 2 approver for the price approval process (typically the ASM's TSM).</description>
    <label>Level 2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Level 2 Approver)</relationshipLabel>
    <relationshipName>Quotes_Level2Approver</relationshipName>
    <type>Lookup</type>
</CustomField>