force-app/main/default/objects/Quote/fields/Level_3_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 3 approver for the price approval process (typically Order Acceptance / Finance Manager).</description>
    <label>Level 3 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Level 3 Approver)</relationshipLabel>
    <relationshipName>Quotes_Level3Approver</relationshipName>
    <type>Lookup</type>
</CustomField>