force-app/main/default/objects/Quote/fields/Number_of_Preventive_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Preventive_Maintenance__c</fullName>
    <label>Number of Preventive Maintenance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>