force-app/main/default/objects/Quote/fields/Reason_for_Revision__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Revision__c</fullName>
    <description>Reason the sales user is revising the quote. Required whenever Status is set to Revision.</description>
    <label>Reason for Revision</label>
    <type>TextArea</type>
</CustomField>