force-app/main/default/objects/Quote/fields/Revised_Quote__c.field-meta.xml
<CustomField>
    <fullName>Revised_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For historical snapshot quotes, points at the current working quote that supersedes this one. Populated automatically when a quote is Revised.</description>
    <label>Revised Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Prior Versions</relationshipLabel>
    <relationshipName>Prior_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>