force-app/main/default/objects/Quote/fields/Total_Internal_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Charges__c</fullName>
    <label>Total Internal Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>