force-app/main/default/objects/Quote/fields/Total_Pricebook_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Pricebook_Price__c</fullName>
    <label>Total Pricebook Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>